# iri20py

./: .gitignore  README.md  meson.build  pyproject.toml  test_unicode.py
src/IRI2020/: 00readme.txt  dfp.f90  igrf.f  iridreg.f  iriflip.f  irifun.f  irishim.f90  irisub.f  iritec.f  iritest.f  iritest.f90
src/iri20py/: __init__.py  base.py  download.py  settings.py  utils.py
tests/: test_iri2020.py
